# tool-affordances

./: CMakeLists.txt
modules/affCollector/src/: affCollector.cpp
modules/affManager/src/: affManager.cpp
modules/affMotor/: main.cpp
modules/graspChecker/src/: graspChecker.cpp
modules/positionFilter/: positionFilter.cpp
modules/simtoolloader/src/: simtoolloader.cpp  simtoolloader.h
modules/tool3DManager/src/: tool3DManager.cpp
